# conclog

./: .codecov.yml  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: coverage.yml  unix.yml  win.yml
include/: logging.hpp  progress_indicator.hpp  thread_registry_interface.hpp
src/: CMakeLists.txt  logging.cpp
test/: CMakeLists.txt  test.hpp  test_logging.cpp  thread.hpp
